style/style.css
.button {
  background: white;
  border: none;
  border-radius: 90px;
  outline: none;
  padding: 10px 30px;
  font-size: 30px;
  color: black;
  cursor: pointer;
  transition: 0.2s all; }
  .button:hover {
    background: grey; }

.project-button {
  background-color: white;
  color: black;
  border: 2px solid #7d7d7d6e;
  border-radius: 1rem;
  font-weight: 800;
  font-size: 1rem;
  padding: .8rem .5rem;
  cursor: pointer;
  transition: .3s ease-in-out;
  text-align: center; }
  .project-button:hover {
    transform: translateY(-0.5rem);
    border: 0;
    box-shadow: 3px 6px 35px rgba(68, 69, 73, 0.144); }

.title-pink {
  background: linear-gradient(to top, #FAC2C2 60%, transparent 60%) no-repeat; }

.title-pink2 {
  background: linear-gradient(to top, #F3CDF8 60%, transparent 60%) no-repeat; }

.title-green {
  background: linear-gradient(to top, #CDF8E0 60%, transparent 60%) no-repeat; }

.title-red {
  background: linear-gradient(to top, #d8c6c6 60%, transparent 60%) no-repeat; }

.title-blue {
  background: linear-gradient(to top, #B5C7E2 60%, transparent 60%) no-repeat; }

.title-orange {
  background: linear-gradient(to top, #F5DEC4 60%, transparent 60%) no-repeat; }

#about-me {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  grid-column-gap: 32px;
  grid-row-gap: 32px;
  align-items: center;
  font-size: 1rem;
  line-height: 1.3;
  margin-top: 128px;
  overflow-x: hidden; }
  #about-me .text {
    margin-left: 50px;
    margin-right: 50px; }
  #about-me .anna {
    width: 100%;
    border-top-left-radius: 15px; }

@media screen and (max-width: 418px) {
  .about-me {
    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr)) !important; } }

footer {
  width: 100vw;
  height: 50vh;
  background: #F8E3CD;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  font-family: "Montserrat", serif; }
  footer .footer-copyright {
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center; }
  footer .icons {
    margin-bottom: 1rem; }
    footer .icons .emails, footer .icons .linkedin, footer .icons .github {
      cursor: pointer;
      width: 2rem;
      margin: 0.5rem;
      transition: 0.2s all; }
      footer .icons .emails:hover, footer .icons .linkedin:hover, footer .icons .github:hover {
        opacity: 0.6; }

#navbar {
  display: grid;
  padding-top: 32px;
  padding-bottom: 32px;
  grid-template-rows: 1fr;
  grid-gap: 5px;
  justify-items: center;
  font-family: "Montserrat", serif;
  font-size: 1rem; }
  #navbar .logo {
    color: black;
    width: 120px;
    transition: 0.2s all; }
    #navbar .logo:hover {
      transform: scale(0.95, 0.95); }
  #navbar .main-nav {
    list-style-type: none;
    padding: 12px;
    border: 1px solid black;
    border-radius: 24px;
    margin-top: 16px;
    margin-left: auto;
    margin-right: auto; }
    #navbar .main-nav li {
      display: inline-block;
      padding-left: 10px;
      padding-right: 10px;
      transition: 0.2s all; }
      #navbar .main-nav li:hover {
        background: linear-gradient(to top, #F5DEC4 60%, transparent 60%) no-repeat; }
  #navbar .nav-links {
    text-decoration: none;
    color: black; }

.project-page {
  max-width: 160rem;
  display: flex;
  align-items: end;
  flex-flow: column;
  margin: 2em 8em;
  padding-bottom: 6rem;
  /* Slider med prosjektbilder */ }
  .project-page .project-title {
    font-size: 3rem;
    font-weight: bolder;
    letter-spacing: .5rem;
    line-height: 1.3; }
  .project-page .project-metadata-container {
    padding: 1rem;
    font-size: 1rem;
    border-left: 1px solid gray;
    padding-left: 1rem;
    margin-top: 1rem;
    margin-bottom: 3rem; }
    .project-page .project-metadata-container .project-category {
      color: #838383; }
  .project-page .lenker {
    display: grid;
    grid-gap: 0.5rem;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    width: 100%; }
  @media screen and (min-width: 1024px) {
    .project-page .lenker {
      width: 50%; } }
  .project-page .question {
    margin-top: 1rem;
    margin-bottom: 0.5rem;
    background: linear-gradient(to top, #CDF8E0 60%, transparent 60%) no-repeat; }
  .project-page .description {
    line-height: 1.3; }
  .project-page .navigation-buttons {
    margin: 0 auto; }
  .project-page .slider {
    margin: 60px auto;
    width: 80%; }
    .project-page .slider .img-box img {
      width: 100%; }

@media screen and (max-width: 700px) {
  .project-page {
    margin: 2em 1rem; } }

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0; }

body {
  font-family: "Montserrat", serif;
  background: #f5f4f6; }
  body a {
    text-decoration: none; }

.content-inset {
  margin: 2em 8em; }

@media screen and (max-width: 700px) {
  .content-inset {
    margin: 2em 1rem; } }

#top-info {
  text-align: center;
  font-size: 1.5rem;
  margin-bottom: 1rem; }

#bio {
  background: white;
  padding: 2rem;
  display: flex;
  border-radius: .5rem;
  text-align: center;
  justify-content: center; }
  #bio .bio-container {
    max-width: 500px; }
  #bio .memoji {
    width: 120px; }

@media screen and (max-width: 418px) {
  .projects {
    grid-template-columns: repeat(1, auto) !important; } }

#projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 1rem;
  margin-top: 50px; }
  #projects .portfolio-preview {
    background: #ffffff;
    overflow: hidden;
    border-radius: .5rem;
    transition: 0.12s all; }
    #projects .portfolio-preview:hover {
      opacity: 1.0;
      box-shadow: 0px 1px 5px #00000014; }
    #projects .portfolio-preview .portfolio-preview-title {
      font-size: 20pt;
      color: black;
      margin: .5rem 1rem; }
    #projects .portfolio-preview .portfolio-preview-category {
      background: #B5C7E2;
      color: #000d1e;
      display: inline-block;
      border-radius: 20px;
      font-size: 9pt;
      margin-left: 1rem;
      margin-top: 10px;
      padding: 4px 10px; }
    #projects .portfolio-preview .portfolio-preview-image {
      width: 100%;
      margin-bottom: 8px; }
    #projects .portfolio-preview .portfolio-preview-subtitle {
      color: #757575;
      font-size: 1rem;
      line-height: 1.5;
      padding: 1rem .75rem; }

